--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "22.13.7",
+    "@types/react": "19.0.10",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
