--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "22.13.7",
     "@types/react": "19.0.10",
-    "eslint": "^9",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "^9.22.0",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
